fix: webpage overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Inter", sans-serif;
+  box-sizing: border-box;
 }
 
 @supports (font-variation-settings: normal) {
